<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/azzurro_pallido"
    tools:context="com.texasfoodmenu.aleinux.texasfoodmenu.Stuzzicheria">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/stuzzicheria"
                android:textSize="24sp"
                android:id="@+id/textStuzzicheria"
                android:padding="3dip"
                android:textStyle="bold|italic"
                android:layout_span="2"
                android:textColor="#000000" />
            <TextView
                android:text="@string/normale"
                android:textSize="24sp"
                android:id="@+id/textNormale"
                android:gravity="end"
                android:padding="3dip"
                android:textStyle="bold|italic"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/rustica_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e400"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/misto1_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e450"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/misto2_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e450"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/misto3_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e550"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/classica_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/vertiginosa_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e350"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/patatinepiccola_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e100"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/patatinemedia_stuzzivheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e150"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/patatinegrande_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e250"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/crocchette_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e200"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/nuggets_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/patatinespeciali_stuzzicheria"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>

    </TableLayout>
</ScrollView>
