<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.texasfoodmenu.aleinux.texasfoodmenu.Piadine">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadine"
                android:padding="3dip"
                android:textStyle="bold|italic"
                android:layout_span="2"
                android:textColor="#000000" />
            <TextView
                android:text="@string/normale"
                android:gravity="end"
                android:padding="3dip"
                android:textStyle="bold|italic"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina1"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e400"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina2"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e400"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina3"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e350"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina4"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina5"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina6"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/piadina7"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/texana_piadina"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e450"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/affumicata_piadina"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e450"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/nutella_piadina"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e300"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/nutellapanna_piadina"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e350"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/nutellaricottacannella_piadina"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e400"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>

 </TableLayout>
</ScrollView>
