<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/paglierino"
    tools:context="com.texasfoodmenu.aleinux.texasfoodmenu.Insalate">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/insalate"
                android:textSize="24sp"
                android:id="@+id/textInsalate"
                android:padding="3dip"
                android:textStyle="bold|italic"
                android:layout_span="2"
                android:textColor="#000000" />
            <TextView
                android:text="@string/normale"
                android:textSize="24sp"
                android:id="@+id/textNormale"
                android:gravity="end"
                android:padding="3dip"
                android:textStyle="bold|italic"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/caprese_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e350"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/alTonno_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e350"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/pollo1_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e450"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/pollo2_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e500"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/cavallo_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e600"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/kebab_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e600"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/salmone_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e600"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/bresaola_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e600"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/vegetariana_insalate"
                android:padding="3dip"
                android:layout_span="2"/>
            <TextView
                android:text="@string/e500"
                android:gravity="end"
                android:padding="3dip"/>
        </TableRow>
    </TableLayout>
</ScrollView>